letter spacing -3, weird bug in ff where triangles show ligthblue

--- a/css/style.css
+++ b/css/style.css
@@ -302,7 +302,8 @@ li p {
     font-size: 1.5em; }
 
   .return {
+    color: white;
     font-size: 24px;
-    letter-spacing: 0px; } }
+    letter-spacing: -3px; } }
 
 /*# sourceMappingURL=style.css.map */
